# kadathic_cryptogram

./: .gitignore  AGENTS.md  DESIGN.md  agentfoundry.yaml  pyproject.toml
.agentfoundry/: agent_foundry.sqlite
agents/cryptogram_solver/: agent.yaml  personality.md
examples/: agentfoundry.yaml.example
src/kadathic_cryptogram/: __init__.py  __main__.py  app.py  config.py  main.py
src/kadathic_cryptogram/backend/: __init__.py  client.py  models.py
src/kadathic_cryptogram/ciphers/: __init__.py  base.py  registry.py  substitution.py
src/kadathic_cryptogram/solver/: __init__.py  engine.py
src/kadathic_cryptogram/state/: __init__.py  app_state.py
src/kadathic_cryptogram/ui/: __init__.py  generate_panel.py  mode_panel.py  shell.py  solve_panel.py  status_bar.py  top_bar.py
tests/: test_cipher_substitution.py  test_config.py  test_solver_engine.py
